Login and roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.h2.console.settings.web-allow-others=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
+
+spring.social.facebook.appId=228175701665524
+spring.social.facebook.appSecret=11a490d60c0e9fba44b38bc440555872
