--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
+        <spring.social.version>1.1.6.RELEASE</spring.social.version>
     </properties>
 
     <dependencies>
@@ -84,6 +85,7 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
