--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,15 @@
+
+
 server:
   port: 9090
 
 spring:
+  mail:
+    host: smtp.mailtrap.io
+    port: 2525
+    username: 0a80830b2e0ee3
+    password: 9e642451d7cebe
+
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -26,4 +34,8 @@ spring:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
+
+
+
+
 
