--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,16 @@
 server:
   port: 9090
 
-#testsendMail
+
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   mail:
     host: localhost
     port: 25
-
+#testsendMail
 #mailtrap.io send message
 #spring:
 #  mail:
